Fixed edit page layout breaking with bold font by making font size smaller

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -187,6 +187,12 @@ div.page-heading {
   }
 }
 
+nav#edit-header {
+  button {
+    font-size: @small-font-size;
+  }
+}
+
 // FOOTER
 
 footer {
